@@ -38,14 +38,15 @@
 </div>
 </div>
 <h1>10. Skins</h1>
-<p><font color="#000000">Bad news: TiEmu uses its own skins; they are
-not VTI-compatible. <br>
-Why? Because the VTI skin format is somewhat
-limited and doesn't take care of some portability issues. <br>
+<p><font color="#000000">Although TiEmu uses its own format for skin,
+it is able to load VTi and old-VTi skins. But, you are strongly
+encouraged to use TiEmu skins instead because VTI skin format is
+somewhat
+limited and doesn't take care of some portability issues (endianess). <br>
 </font></p>
-<p><font color="#000000">Good news: You can re-use your VTI skins!<br>
-</font></p>
-<p><font color="#000000">Well, how can I use or develop TiEmu skins?
+<p><font color="#000000">How can I develop TiEmu skins or convert them
+from VTi?
+<br>
 Julien Blache has developed a multi-platform skin editor, called <a
  href="http://lpg.ticalc.org/prj_tiemu/">SkinEdit</a>:<br>
 </font></p>
@@ -56,7 +57,7 @@ Julien Blache has developed a multi-platform skin editor, called <a
 of a
 skin editor and some add-ons:<br>
 - import/export of VTI 2.1, VTI 2.5 and TiEmu 2.0 skin format (for all
-calcs: TI82..V200),<br>
+calcs: TI82...V200),<br>
 - load any image format (not restricted to JPEG). This feature depends
 on the pixbuf loaders provided by the GTK+ libraries.<br>
 <br>
